<package format="3">
  <name>robotics_arm_pkg</name>
  <version>0.0.1</version>
  <description>Metapackage for the robotics arm stack</description>
  <maintainer email="brian_llh@hotmail.com">Brian Lai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robotics_arm_description</exec_depend>
  <exec_depend>robotics_arm_moveit</exec_depend>
  <exec_depend>robotics_arm_bringup</exec_depend>
  <exec_depend>robotics_arm_control</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
